--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -157,7 +157,7 @@ My Blog
                   <h5 class="mb-0">Languages and Technologies</h5>
                 </div>
                  
-                <ul class="list-group list-group-flush" style="height: 300px  ;">
+                <ul class="list-group list-group-flush">
                   {% for language in languages %}
                   
                   <li class="list-group-item">{{ language.language }}</li>
